[#184814780] Bug fix: Too much empty vertical space at the bottom of graphs (#726)
[#184077414] Bug fix: Plot area is wrongly clipping points

* The first was due to the appearance of title bar height where it shouldn't be
* The second is fixed by changing the css for graph-dot-area to have overflow: visible
  - But it was already true, and is still true that (see #184083861) dot plot points can be dragged into the left axis area and be visible when they shouldn't be

--- a/v3/src/components/graph/components/graph.scss
+++ b/v3/src/components/graph/components/graph.scss
@@ -9,7 +9,8 @@
 
   svg {
     width: 100%;
-    height: calc(100% - $title-bar-height);
+    height: 100%;
+    overflow: visible;
   }
 
   text {
